external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_field_access.exp
error[E03010]: unbound field
   ┌─ tests/move_2024/parser/positional_field_access.move:26:9
   │
26 │         y.0x0 + y.0xff
   │         ^^^^^ Unbound field '0x0' in '0x42::M::Foo'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/positional_field_access.move:26:11
   │
26 │         y.0x0 + y.0xff
   │           ^^^ Invalid field access. Expected a decimal number but was given a hexadecimal
   │
   = Positional fields must be a decimal number in the range [0 .. 255] and not be typed, e.g. `0`

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/positional_field_access.move:26:17
   │
26 │         y.0x0 + y.0xff
   │                 ^^^^^^ Unbound field '0xff' in '0x42::M::Foo'

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/positional_field_access.move:26:19
   │
26 │         y.0x0 + y.0xff
   │                   ^^^^ Invalid field access. Expected a decimal number but was given a hexadecimal
   │
   = Positional fields must be a decimal number in the range [0 .. 255] and not be typed, e.g. `0`

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/positional_field_access.move:30:9
   │
30 │         y.1_0 + y.1_0_0
   │         ^^^^^ Unbound field '10' in '0x42::M::Foo'

error[E03010]: unbound field
   ┌─ tests/move_2024/parser/positional_field_access.move:30:17
   │
30 │         y.1_0 + y.1_0_0
   │                 ^^^^^^^ Unbound field '100' in '0x42::M::Foo'

